# cmake_clib_template

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: version.cmake
examples/: CMakeLists.txt  main.c
sources/: CMakeLists.txt  answer.c  library.h  version.c
tests/: CMakeLists.txt  answer.cpp  version.cpp
